--- a/lkwt_boot/src/main/resources/templates/fragments/popup.html
+++ b/lkwt_boot/src/main/resources/templates/fragments/popup.html
@@ -1,36 +1,47 @@
-<div id="questionPop" class="position-fixed" style="background-color: rgba(0, 0, 0, 0.5); top:0; left:0; display: none; width: 100vw; height: 100vh;">
-    <div class="card position-absolute" style="transform:translate(-50%, -50%); top:50%; left:50%; width: 75vw;">
-        <div class="card-body" style="margin: 0px; height: 100%;">
+<div id="ansPop" class="position-fixed" style="background-color: rgba(0, 0, 0, 0.5); top:0; left:0; width: 100vw; height: 100vh;">
+    <div class="card position-absolute" style="transform:translate(-50%, -50%); top:50%; left:50%;">
+        <div style="width: 25rem;"> 
 
-            <h5 id="qContent"></h5>
-
-            <div class="row">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
+            <div class="card-body" style="margin: 0px; height: 100%;">
+    
+                <p id="ansContent" class="h5 m-0 font-weight-bold text-primary text-center">이번 시간에 jpa가 이해가되니</p>
+    
+                <div class="m-4">
+                    <div id="ansStar" class="text-center">
+                            <i id="starZero" data-value="0" class="fas fa-ban fa-3x" style="color:#dddfeb;"></i>
+                            <i data-value="25" class="fas fa-star fa-3x" style="color:#dddfeb;"></i>
+                            <i data-value="50" class="fas fa-star fa-3x" style="color:#dddfeb;"></i>
+                            <i data-value="75" class="fas fa-star fa-3x" style="color:#dddfeb;"></i>
+                            <i data-value="100" class="fas fa-star fa-3x" style="color:#dddfeb;"></i>
+                    </div>
+        
+                    <div id="ansYnN" class="row d-none">
+                        <i data-value="0" class="far fa-times-circle fa-3x" style="color:#dddfeb;"></i>
+                        <i data-value="100" class="far fa-check-circle fa-3x" style="color:#dddfeb;"></i>
+                    </div>
+                </div>
+    
+                <form id="answerForm">
+                    <input type="hidden" name="userName" value="${userName}">
+                    <input type="hidden" name="qno" value="#">
+                    <input type="hidden" name="indicator" value="0">
+                    <div class="form-group row">
+                        <div class="col-sm-3 col-md-0">
+                            <input type="text" class="form-control form-control-user" name="tag" placeholder="TAG">
+                        </div>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control form-control-user" name="comment" placeholder="COMMENT">
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="form-group">
+                            <a href="#" id="ansPopDown" class="btn btn-primary btn-user btn-block">
+                                SUBMIT
+                            </a>
+                    </div>
+                </form>
+    
             </div>
-
-            <form id="answerForm">
-                <input type="hidden" name="userName" value="${userName}">
-                <input type="hidden" name="qno" value="#">
-                <input type="hidden" name="indicator;" value="0">
-                <div class="form-group row">
-                    <div class="col-sm-6 col-md-0">
-
-                    </div>
-                    <div class="col-sm-6">
-
-                    </div>
-                </div>
-                <hr>
-                <div class="form-group">
-                        <a href="#" class="btn btn-primary btn-user btn-block">
-                            SUBMIT
-                        </a>
-                </div>
-            </form>
-
         </div>
     </div>
 </div>
