--- a/lkwt_boot/src/main/resources/templates/tnm/main.html
+++ b/lkwt_boot/src/main/resources/templates/tnm/main.html
@@ -26,7 +26,7 @@
     
     <script th:inline="javascript">
         $(document).ready(function (){
-            var socket = io("localhost:3000");
+            var socket = io("10.10.10.132:3000");
             //localhost:3000
             //10.10.10.132:3000
 
@@ -48,6 +48,8 @@
             function setAnsPop(data){
                 $ansQno.val(data.qno);
                 $ansContent.text(data.content);
+                $ansTag.val("");
+                $ansComment.val("");
                 $ansIndicator.val(0);
                 
                 if(data.yesOrNo){
