--- a/lkwt_boot/src/main/resources/templates/fragments/table.html
+++ b/lkwt_boot/src/main/resources/templates/fragments/table.html
@@ -33,7 +33,7 @@
           <!-- need loop -->
             <tr th:each="post: ${pageDTO}">
               <td th:text="${post.bno}"></td>
-              <td><a th:href="'/tnm/'+${post.tag}+'/'+${post.bno}" th:text="${post.title}"></a></td>
+              <td><a th:href="${post.bno}" th:text="${post.title}"></a></td>
               <td th:text="${post.regDate.toLocalDate()}"></td>
             </tr>                     
       </tbody>
@@ -45,13 +45,13 @@
       <div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite" th:text="'Showing '+${pageDTO.number +1} +' of '+ ${pageDTO.totalPages}+' entries'"></div>
     </div>
     <div class="col-sm-12 col-md-7">
-       <div class="dataTables_paginate paging_simple_numbers" id="paginate" th:with="start=${pageDTO.number-(pageDTO.number%10)+1}, end=${start + 9 > pageDTO.totalPages ? pageDTO.totalPages : start + 9}">
+       <div class="dataTables_paginate paging_simple_numbers" id="paginate" th:with="start=${pageDTO.number-(pageDTO.number%10)+1}, end=${start + 9 > pageDTO.totalPages ? (pageDTO.totalPages == 0? 1:pageDTO.totalPages) : start + 9}">
         <ul class="pagination" style="justify-content: flex-end;">
-          <li class="paginate_button page-item previous" id="dataTable_previous" th:classappend="${star} ? 'disabled'">
+          <li class="paginate_button page-item previous" id="dataTable_previous" th:classappend="${start} == 1 ? 'disabled'">
             <a th:href="'?page='+${start-1}" aria-controls="dataTable" data-dt-idx="0" tabindex="0" class="page-link">Previous</a>
           </li>
           
-          <!-- need loop -->
+              <!-- need loop -->
               <li class="paginate_button page-item " th:each="page: ${#numbers.sequence(start, end)}">
                 <a th:href="'?page='+${page}" aria-controls="dataTable" tabindex="0" class="page-link" th:text="${page}"></a>
               </li>
@@ -65,3 +65,4 @@
   </div>
 </div>
     
+ 
