--- a/lkwt_boot/src/main/resources/templates/fragments/postPop.html
+++ b/lkwt_boot/src/main/resources/templates/fragments/postPop.html
@@ -22,14 +22,14 @@
 					</div>
 					<hr>
 					<div>
-						<label><input id="fileInput" type="file"><i id="fileInputLable" class="fas fa-times-circle"></i></label>
+						<label><input id="fileInput" type="file"><i id="fileInputLable" class="fas fa-check-circle"></i></label>
 					</div>
 		            <hr>
                 </div>
                 
 	            <div class="h-auto">
                     <a id="taskSubmit" href="/board/list" class="btn btn-primary btn-icon-split"> <span
-						class="icon text-white-50"> <i class="fas fa-times-circle"></i>
+						class="icon text-white-50"> <i class="fas fa-check-circle"></i>
                     </span> <span class="text">Submit</span>
                     </a>
 					<a id="postPopDown" href="/board/list" class="btn btn-danger btn-icon-split"> <span
