--- a/lkwt_boot/src/main/resources/templates/tnm/table.html
+++ b/lkwt_boot/src/main/resources/templates/tnm/table.html
@@ -125,31 +125,46 @@
                 var formData = new FormData();
                 var files = this.files
 
+                console.log("file change detected");
                 $("#fileInputLable").hide();
                 
                 for (let i = 0; i < files.length; i++) {
                     formData.append("uploadfiles" , files[i]);
                 }
-                
+                console.log([[${fileServer}]]+'upload');
                 $.ajax({
-                    url : [[${fileServer}]]+'/upload',
+                    url : [[${fileServer}]]+'upload',
                     processData : false,
                     contentType : false,
                     data : formData,
                     type : 'POST',
                     success : function(result) {
                         fileVO = result[0];
-
+                        fileVO.bno = curBno;
+                        
                         $("#fileInputLable").show();
-                    } // fnc
+                    }, // fnc
+                    error : function(error) {
+                        alert("Error!");
+                        console.log(error);
+                    }
+
                 }); // $.ajax
             });
 
             // 과제 파일 등록
             $postTaskSubmit.on("click", function(e){
                 e.preventDefault();
-
-                
+                console.log(fileVO);
+                $.ajax({
+                    url:"/tnm/task/submit",
+                    type:"POST",
+                    dataType:"json",
+                    data: fileVO,
+                    success: function (result) {
+                        alert("제출되었습니다");
+                    }
+                });
 
                 fileVO = null;
 
