--- a/lkwt_boot/src/main/resources/templates/login.html
+++ b/lkwt_boot/src/main/resources/templates/login.html
@@ -1,22 +1,22 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
   
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>TNM - Login</title>
-  
-  <!-- Custom fonts for this template-->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+ 
+  <!-- Custom fonts for this template -->
+  <link th:href=@{~/vendor/fontawesome-free/css/all.min.css} rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-  
-  <!-- Custom styles for this template-->
-  <link href="css/sb-admin-2.min.css" rel="stylesheet">
-  
+
+  <!-- Custom styles for this template -->
+  <link th:href=@{~/css/sb-admin-2.min.css} rel="stylesheet">
+
+  <!-- Custom styles for this page -->
+  <link th:href=@{~/vendor/datatables/dataTables.bootstrap4.min.css} rel="stylesheet">
+
 </head>
 <body>
     <div class="col-lg-6">
@@ -24,21 +24,26 @@
           <div class="text-center">
             <h1 class="h4 text-gray-900 mb-4">TNM</h1>
           </div>
-          <form id="loginForm" class="user" action="/login" method="POST">
+          <form id="loginForm" class="user" action="/loginprocess" method="post">
             <div class="form-group">
-              <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
+              <input name="username" type="text" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter ID" th:value="${username}">
             </div>
             <div class="form-group">
-              <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
+              <input name="password" type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
             </div>
             <div class="form-group">
               <div class="custom-control custom-checkbox small">
                 <input type="checkbox" class="custom-control-input" id="customCheck">
                 <label class="custom-control-label" for="customCheck">Remember Me</label>
+                <input type="hidden" th:name="${_csrf.parameterName}"  th:value="${_csrf.token}" />
               </div>
             </div>
             <a id="loginBtn" href="/login" class="btn btn-primary btn-user btn-block">
               Login
+            </a>
+            <hr>
+            <a th:if="${msg != null}" href="#" class="btn btn-google btn-user btn-block">
+              <i class="fas fa-frown fa-fw"></i><div th:text="${msg}"></div>
             </a>
         </form>
         </div>
