--- a/lkwt_boot/src/main/resources/templates/tnm/main.html
+++ b/lkwt_boot/src/main/resources/templates/tnm/main.html
@@ -22,6 +22,7 @@
 
     <h1>welcome</h1>
     <h3 th:text="${userName}"></h3>
+    <h6 th:text="${className}"></h6>
 
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <th:block th:include=@{~/fragments/ansFrag}></th:block>
